--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% block head %}
 
     {% endblock head %}
@@ -13,24 +14,63 @@
     <title>my chat</title>
 </head>
 <body>
-  <div>
-    {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} alert-dismissible sticky-alert">
-      <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-      {{ message }}
+  {% load static %}
+  {% load i18n %}
+  
+
+
+  <div class="wrapper">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <div class="container">
+              <div class="d-flex">
+                  <a id="main-title" href="#" class="navbar-brand fs-2 float-end">My Chat</a>
+                  <!-- <p class="text-light">اتبعوا ولا تبتدعوا فقد كفيتم</p> -->
+              </div>
+  
+  
+          <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenu">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+  
+          <div class="collapse navbar-collapse"  id="navmenu">
+              <ul class="navbar-nav ms-auto"  >
+                  <li class="nav-item">
+                    {% if not request.user.is_authenticated %}
+                    <a href="{% url 'login' %}" class="nav-link fs-5">login</a>
+                    {% else %}
+                    <a href="{% url 'logout' %}" class="nav-link fs-5">logout</a>
+
+                    {% endif %}
+                  </li>
+  
+              </ul>
+  
+          </div>
+  
+      </div>
+  </nav>
+
+    <div>
+      {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible sticky-alert">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+        {{ message }}
+      </div>
+      {% endfor %}
+      {% endif %}
+      
     </div>
-    {% endfor %}
-    {% endif %}
-    
+    <div class="main-container">
+      {% block content %}  
+  
+        
+  
+      {% endblock content %}  
+    </div>
   </div>
-  <a href="{% url 'logout' %}">logout</a>
 
-  {% block content %}  
 
-    
-
-  {% endblock content %}  
 
   {% block extra_js %}
 
