--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,7 +38,7 @@ input:focus {
 .chat-container {
     border: 1px solid black;
     border-radius: 15px;
-    height: 80%;
+    height: 700px;
     width: 50%;
 }
 
@@ -46,6 +46,6 @@ input:focus {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: gray;
+    background-color: lightgray;
     padding: 10px;
 }
